# kindle-wallpapers

./: .gitignore  README.md  generate.py  pyproject.toml  temp.txt
src/kindle_wallpapers/: cli.py  parser.py  readwise.py  renderer.py
